--- a/tc-ebpf/Cargo.toml
+++ b/tc-ebpf/Cargo.toml
@@ -8,7 +8,7 @@ aya-ebpf = "0.1.0"
 aya-log-ebpf = "0.1.0"
 memoffset = "0.6"
 tc-common = { path = "../tc-common" }
-
+network-types = "0.0.5"
 [[bin]]
 name = "tc"
 path = "src/main.rs"
