--- a/tc/Cargo.toml
+++ b/tc/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tc"
+name = "tc-aya"
 version = "0.1.0"
 edition = "2021"
 publish = false
@@ -17,5 +17,5 @@ tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net"
 simplelog = "0.12"
 
 [[bin]]
-name = "tc"
+name = "tc-aya"
 path = "src/main.rs"
