--- a/tc/Cargo.toml
+++ b/tc/Cargo.toml
@@ -13,8 +13,9 @@ anyhow = "1"
 env_logger = "0.10"
 libc = "0.2"
 log = "0.4"
-tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
+tokio = { version = "1.25", features = ["full"] }
 simplelog = "0.12"
+netstat = "0.7.0"
 
 [[bin]]
 name = "tc-aya"
